# validation_automation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: pyproject.instructions.md  tests.instructions.md  workflows.instructions.md
.github/workflows/: ci.yml  claude-pr.yml
src/mypackage/: __init__.py
src/validation_automation/: __init__.py
tests/: conftest.py  test_smoke.py
